# ohmni-ros-gui

./: README.md
ohmni_amcl/: CMakeLists.txt  package.xml
ohmni_amcl/launch/: ohmni_amcl.launch
ohmni_amcl/launch/includes/: amcl.launch.xml  move_base.launch.xml
ohmni_amcl/maps/: map.yaml
ohmni_amcl/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ohmni_amcl/rviz/: ohmni_amcl.rviz
ohmni_gui_bridge/: CMakeLists.txt  package.xml
ohmni_gui_bridge/gui/: gui.html  gui2.html
ohmni_gui_bridge/launch/: websocket.launch
